--- a/UITableViewSelfSizing/Base.lproj/Main.storyboard
+++ b/UITableViewSelfSizing/Base.lproj/Main.storyboard
@@ -1,22 +1,62 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="UITableViewSelfSizing" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ftm-wF-d4k">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomCell" rowHeight="80" id="5O3-GV-R3o" customClass="CustomCell" customModule="UITableViewSelfSizing" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5O3-GV-R3o" id="UWV-2D-pT0">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Title" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X7p-dZ-5jE">
+                                            <rect key="frame" x="18" y="13" width="564" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="Xq3-TO-0DF"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" misplaced="YES" text="Value" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sdE-Ha-J0V">
+                                            <rect key="frame" x="18" y="53" width="564" height="20"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="X7p-dZ-5jE" firstAttribute="leading" secondItem="UWV-2D-pT0" secondAttribute="leadingMargin" constant="10" id="69n-he-BN2"/>
+                                        <constraint firstItem="sdE-Ha-J0V" firstAttribute="leading" secondItem="UWV-2D-pT0" secondAttribute="leadingMargin" constant="10" id="DGt-0q-QIX"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="sdE-Ha-J0V" secondAttribute="bottom" constant="6" id="Rnq-NN-vBA"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="sdE-Ha-J0V" secondAttribute="trailing" constant="10" id="Xkq-5P-MNP"/>
+                                        <constraint firstItem="X7p-dZ-5jE" firstAttribute="top" secondItem="UWV-2D-pT0" secondAttribute="topMargin" constant="5" id="aB7-8f-0qh"/>
+                                        <constraint firstItem="sdE-Ha-J0V" firstAttribute="top" secondItem="X7p-dZ-5jE" secondAttribute="bottom" constant="10" id="dkK-g3-wF0"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="X7p-dZ-5jE" secondAttribute="trailing" constant="10" id="sRg-qb-BpA"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="titleLabel" destination="X7p-dZ-5jE" id="CE7-cD-OhL"/>
+                                    <outlet property="valueLabel" destination="sdE-Ha-J0V" id="hj3-MI-uL8"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="BYZ-38-t0r" id="Uji-AJ-k4J"/>
+                            <outlet property="delegate" destination="BYZ-38-t0r" id="lIu-4n-A01"/>
+                        </connections>
+                    </tableView>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
